2004-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Bind w3m-safe-url-regexp.

	* gnus-art.el (gnus-article-wash-html-with-w3m): Make the
	w3m-safe-url-regexp variable buffer-local and set it as the value
	of mm-w3m-safe-url-regexp.

	* mm-view.el (mm-inline-text-html-render-with-w3m): Ditto.

	* gnus-msg.el (gnus-setup-message): Ignore an article copy while
	parsing gnus-posting-styles when the message is not for replying.

	* dgnushack.el: Autoload sgml-mode for XEmacs.

	* nnrss.el (nnrss-opml-export): Use
	mm-set-buffer-file-coding-system instead of
	set-buffer-file-coding-system.

2004-02-27  Jesper Harder  <harder@ifa.au.dk>

	* spam-stat.el: Pedantic docstring and whitespace fixes (courtesy
	of checkdoc.el).
	* nnrss.el: do.
	* gnus-mlspl.el: do.
	* gnus-ml.el: do.
	* gnus-srvr.el: do.

	* nnrss.el (nnrss-opml-export): Turn on sgml-mode.

2004-02-27  Kevin Ryde  <user42@zip.com.au>  (tiny change)

	* gnus.el (gnus-group, gnus-summary, gnus-summary-sort):
	Corrections to custom-manual links.

	* gnus-art.el (gnus-article): Ditto.

	* mm-decode.el (mime-display, mime-security): Ditto.

2004-02-26  Jesper Harder  <harder@ifa.au.dk>

	* flow-fill.el: Typo.

2004-02-26  Andrew Cohen <cohen@andy.bu.edu>

	* spam-wash.el: New file.

2004-02-26  Mark A. Hershberger <mah@everybody.org> 

	* nnrss.el (nnrss-opml-import, nnrss-opml-export): New functions.

2004-02-26  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-summary-prepare-exit): gnus-set-difference needs
	to be run with new-articles as LIST1, not LIST2
	(spam-registration-functions): add spam-use-ham-copy as a nil
	registration backend

2004-02-26  Jesper Harder  <harder@ifa.au.dk>

	* spam-stat.el (spam-stat-washing-hook): New option.
	(spam-stat-buffer-words): Use it.
	(spam-stat-process-directory, spam-stat-test-directory): Use
	insert-file-contents-literally.
	(spam-stat-coding-system): New variable.
	(spam-stat-load, spam-stat-save): Use it.

2004-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>
