@@ -1,3 +1,10 @@
+2004-02-27  Simon Josefsson  <jas@extundo.com>
+
+	* gnus-sum.el (gnus-move-group-prefix-function): Add, default to
+	gnus-group-real-prefix.
+	(gnus-summary-move-article): Use it, instead of
+	gnus-group-real-prefix.
+
 2004-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lpath.el: Bind w3m-safe-url-regexp.
